<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WidgetTodo</string>
    <string name="widget_name">TODO Widget</string>
    <string name="widget_description">シンプルなTODOウィジェット</string>
    <string name="empty_state_message">+をタップしてタスクを追加</string>
    <string name="add_todo_hint">新しいタスク</string>
    <string name="add_button">追加</string>
    <string name="cancel_button">キャンセル</string>
    <string name="undo_message">タスクを削除しました</string>
    <string name="undo_action">元に戻す</string>
</resources>
